data/derived/fa15/progs/unify/prog3796.ml.out
Characters 314-328:
  else ((carry+1),[(h+b+c)/10]::[(h+b+c) mod 10]@t) in
                                 ^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
